clusters/rainbow/public/anubis/anubis.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: anubis
  namespace: public # Pod is a namespaced a resource
  labels:
    # For service selector
    app: anubis
spec:
  containers:
    - name: anubis
      image: ghcr.io/techarohq/anubis:latest
      imagePullPolicy: Always
      ports:
      - protocol: TCP
        containerPort: 8080
        name: anubis
      volumeMounts:
      - name: anubis-config
        mountPath: /data/cfg
      resources:
        limits:
          cpu: 750m
          memory: 256Mi
        requests:
          cpu: 250m
          memory: 256Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
  # Pod volumes
  volumes:
  - name: anubis-config
    configMap:
      name: anubis-config

---
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: public # Service is a namespaced resource
spec:
  type: ClusterIP
  selector:
    app: anubis
  ports:
    - protocol: TCP
      port: 8080 # port that will be externally exposed on the load balancer
      targetPort: 8080 # pod's port for internal routing
      name: anubis

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anubis-ingress
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`anubis.tuckerthomas.com`) && PathPrefix(`/.within.website`)
      kind: Rule
      services:
        - kind: Service
          name: anubis
          namespace: public
          port: 8080
  tls:
    secretName: public-cert-prod
    domains:
      - main: anubis.tuckerthomas.com

---
# Forward authentication to example.com
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: anubis-auth
  namespace: public
spec:
  forwardAuth:
    address: http://anubis.public.svc.cluster.local:8080/.within.website/x/cmd/anubis/api/check
    # Traefik complains if this isnt explicitly set
    # We must have this to receive the headers from external trafficepolicy according to google ai
    trustForwardHeader: true
    maxResponseBodySize: 1048576
